k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang-server
  template:
    metadata:
      labels:
        app: golang-server
    spec:
      containers:
        - name: golang-server
          image: golang-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: golang-server
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: golang-server
