k8s/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: example-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#     - host: 192.168.1.100
#       http:
#         paths:
#           - path: /goserver
#             pathType: Prefix
#             backend:
#               service:
#                 name: golang-server
#                 port:
#                   number: 8080

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /goserver
            pathType: Prefix
            backend:
              service:
                name: golang-server
                port:
                  number: 8080
